// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PinField should render \`Disabled\` state 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--disabled"
    >
      Disabled
    </label>
    <div
      class="cds-form__pin-field cds-form--undefined"
    >
      <div
        class="cds-form__field cds-form--disabled"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          disabled=""
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--disabled"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          disabled=""
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--disabled"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          disabled=""
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--disabled"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          disabled=""
          maxlength="1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PinField should render \`Error\` state 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--error"
    >
      Error
    </label>
    <div
      class="cds-form__pin-field cds-form--undefined"
    >
      <div
        class="cds-form__field cds-form--error"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--error"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--error"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--error"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PinField should render \`Secret\` mode (hidden values) 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--undefined"
    >
      Secret
    </label>
    <div
      class="cds-form__pin-field cds-form--undefined"
    >
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="password"
          value="1"
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="password"
          value="2"
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="password"
          value="3"
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="password"
          value="4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PinField should render \`Small\` size 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--undefined"
    >
      Small
    </label>
    <div
      class="cds-form__pin-field cds-form--small"
    >
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PinField should render 8 inputs 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--undefined"
    >
      Longer
    </label>
    <div
      class="cds-form__pin-field cds-form--undefined"
    >
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds-form__field cds-form--undefined"
      >
        <input
          autocomplete="off"
          class="cds-form__input"
          maxlength="1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
